--- a/src/main/resources/templates/user-info.html
+++ b/src/main/resources/templates/user-info.html
@@ -10,16 +10,26 @@
 
 <form th:method="POST" th:action="@{saveUser}" th:object="${newUser}">
     <label for="name">Enter name: </label>
-    <input type="text" th:field="*{getName()}" id="name"/>
+    <input type="text" th:field="*{name}" id="name"/>
     <br/>
-    <label for="lastname">Enter lastname: </label>
-    <input type="text" th:field="*{getSurname()}" id="lastname"/>
+    <label for="surname">Enter surname: </label>
+    <input type="text" th:field="*{surname}" id="surname"/>
     <br/>
-<!--    <label for="email">Enter email: </label>-->
-<!--    <input type="text" th:field="*{email}" id="email"/>-->
+    <label for="password">Enter password: </label>
+    <input type="text" th:field="*{password}" id="password"/>
+    <br/>
+    <label for="roleList">Select a role:</label>
+    <select id="roleList" multiple name="userRole">
+        <option th:each="role : ${allRoles}" th:value="${role.getName()}" th:text="${role.getName()}"/>
+    </select>
+    <br/>
     <br/>
     <input type="submit" value="OK"/>
 </form>
+<br>
+<br>
+<input type="button" value="Log out"
+       onclick="window.location.href='/logout'">
 
 </body>
 </html>
