--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -1,35 +1,72 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-  <meta charset="UTF-8">
-  <title>All users</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
 </head>
 <body>
-<h2>User profile</h2>
-<hr>
-<table border="1">
-  <thead>
-  <tr>
-    <th>Id</th>
-    <th>Name</th>
-    <th>Surname</th>
-    <th>Password</th>
-    <th>Role</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr>
-    <td th:text="${userInfo.id}"></td>
-    <td th:text="${userInfo.name}"></td>
-    <td th:text="${userInfo.surname}"></td>
-    <td th:text="${userInfo.password}"></td>
-    <td th:text="${userInfo.roles}"></td>
-  </tr>
-  </tbody>
-</table>
-<br>
-<input type="button" value="Log out"
-       onclick="window.location.href='/logout'">
 
+<!--Навигационная панель-->
+<nav class="navbar navbar-dark bg-dark text-white">
+    <a class="navbar-brand"
+       th:text="${userInfo.name} + ' with roles: ' + ${userInfo.roles}">
+    </a>
+    <div class="collapse navbar-collapse" id="nav"></div>
+    <span class="navbar-text">
+                <a class="nav-link" href="/logout">Logout</a>
+            </span>
+</nav>
+
+<div class="container-fluid">
+    <div class="row mt-3 vh-100">
+        <div class="col-md-2">
+            <nav class="nav nav-pills flex-column">
+                <div sec:authorize="hasAnyRole('ROLE_ADMIN')">
+                    <a class="nav-link" href="/admin/">Admin</a>
+                </div>
+                <a class="nav-link active" href="/user/">User</a>
+            </nav>
+        </div>
+
+        <div class="col-10 bg-light ">
+            <h1>User information-page</h1>
+            <div class="card">
+                <div class="card-header">
+                    <b>About user</b>
+                </div>
+                <br>
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Age</th>
+                        <th>Email</th>
+                        <th>Password</th>
+                        <th>Role</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td th:text="${userInfo.id}"></td>
+                        <td th:text="${userInfo.name}"></td>
+                        <td th:text="${userInfo.surname}"></td>
+                        <td th:text="${userInfo.age}"></td>
+                        <td th:text="${userInfo.email}"></td>
+                        <td th:text="${userInfo.password}"></td>
+                        <td th:text="${userInfo.roles}"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
